@@ -1,14 +1,16 @@
 package com.finditnow.deliveryservice.security;
 
 import com.finditnow.jwt.JwtService;
-import com.finditnow.jwt.exceptions.JwtExpiredException;
 import com.finditnow.jwt.exceptions.JwtValidationException;
 import com.finditnow.redis.RedisStore;
+import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.Jws;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
@@ -16,12 +18,10 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
 @Component
-public class JwtAuthFilter extends OncePerRequestFilter { // Ensure 'extends'
+public class JwtAuthFilter extends OncePerRequestFilter {
 
     private final JwtService jwt;
     private final RedisStore redis;
@@ -41,49 +41,49 @@ public class JwtAuthFilter extends OncePerRequestFilter { // Ensure 'extends'
             return;
         }
 
-
-
         if (redis.isAccessTokenBlacklisted(token)) {
-            sendUnauthorized(response, "token_revoked");
+            SecurityContextHolder.clearContext();
+            filterChain.doFilter(request, response);
             return;
         }
 
         try {
-            if (jwt.isServiceToken(token)) {
-                List<SimpleGrantedAuthority> serviceAuthorities = Collections.singletonList(
-                        new SimpleGrantedAuthority("ROLE_SERVICE"));
-                UsernamePasswordAuthenticationToken serviceAuth = new UsernamePasswordAuthenticationToken(
-                        "service", null, serviceAuthorities);
-                SecurityContextHolder.getContext().setAuthentication(serviceAuth);
-                request.setAttribute("profile", "SERVICE");
-                filterChain.doFilter(request, response);
-                return;
+            UsernamePasswordAuthenticationToken authentication;
+            Jws<Claims> claims = jwt.parseClaims(token);
+            if("service".equals(claims.getPayload().get("typ", String.class))) {
+
+                List<GrantedAuthority> authorities =
+                        List.of(new SimpleGrantedAuthority("ROLE_SERVICE"));
+
+                authentication = new UsernamePasswordAuthenticationToken(
+                        claims.getPayload().getSubject(),
+                        null,
+                        authorities
+                );
+            }else{
+                String userId = claims.getPayload().get("userId", String.class);
+                String profile = claims.getPayload().get("profile", String.class);
+
+                List<GrantedAuthority> authorities =
+                        List.of(new SimpleGrantedAuthority("ROLE_" + profile.toUpperCase()));
+
+                authentication = new UsernamePasswordAuthenticationToken(
+                        userId,
+                        null,
+                        authorities
+                );
+                request.setAttribute("userId", userId);
+                request.setAttribute("profile", profile);
             }
 
-            Map<String, String> userInfo = jwt.parseTokenToUser(token);
-            String userId = userInfo.get("userId");
-            String profile = userInfo.get("profile");
-
-            List<SimpleGrantedAuthority> authorities = Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + profile.toUpperCase()));
-
-            UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(userId, null, authorities);
-
-            // 2. Set additional request details
             authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-
             SecurityContextHolder.getContext().setAuthentication(authentication);
 
-            // Optional: Continue using attributes if needed for controllers
-            request.setAttribute("userId", userId);
-            request.setAttribute("profile", profile);
             filterChain.doFilter(request, response);
 
-        } catch (JwtExpiredException e) {
-            SecurityContextHolder.clearContext();
-            sendUnauthorized(response, "token_expired");
         } catch (JwtValidationException e) {
             SecurityContextHolder.clearContext();
-            sendUnauthorized(response, "token_invalid");
+            filterChain.doFilter(request, response);
         }
     }
 
@@ -91,18 +91,5 @@ public class JwtAuthFilter extends OncePerRequestFilter { // Ensure 'extends'
         String header = req.getHeader("Authorization");
         if (header == null || !header.startsWith("Bearer ")) return null;
         return header.substring(7);
-    }
-
-    private void sendUnauthorized(HttpServletResponse response, String message) throws IOException {
-
-        response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-        response.setContentType("application/json");
-
-        response.getWriter().write("""
-                {
-                  "success": false,
-                  "error": "%s"
-                }
-                """.formatted(message));
     }
 }
